projet_gl/src/test/deca/syntax/valid/listClass/selection.deca
// Description:
//    test parser for DeclClass (extends).
//
// Resultats:
//    ok
//
// Historique:
//    cree le 19/01/2024

class A {
    int a;
    int b;
}

{
    A test1 = new A();
    test1.a = 1;
    test1.b = 2;
}